--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ ul {
 }
 
 img {
-  max-width: 100px;
+  max-width: 100%;
 }
 
 /* GRID GERAL */
@@ -35,8 +35,27 @@ img {
   padding: 30px;
   align-items: center;
 }
-.estrutura .sidenav {
-  grid-area: sidenav;
+.estrutura .header .logo {
+  max-width: 200px;
+}
+.estrutura .header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.estrutura .header nav li + li {
+  margin-left: 30px;
+}
+.estrutura .header nav a {
+  display: block;
+  padding: 10px;
+  color: white;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.1s;
+}
+.estrutura .header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
 .estrutura .content {
   grid-area: content;
