--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,10 +18,34 @@
         background: linear-gradient(135deg, #8844ee, #B07DFB);
         padding: 30px;
         align-items: center;
+        .logo{
+            max-width: 200px;
+        }
+        nav {
+            ul{
+            display: flex;
+            flex-wrap: wrap;
+            }
+            li + li{
+                margin-left: 30px;
+            }
+            a{
+                display: block;
+                padding: 10px;
+                color: white;
+                font-size: 1.125em;
+                background: rgba(0, 0,0, .1);
+                border-radius:5px;
+                transition: 0.1s;
+                &:hover{
+                    background: rgba(0, 0,0, .5)
+                }
+            }
+        }
     }
     
     .sidenav{
-     grid-area: sidenav;
+
     }
     
     .content{
