Finalizado a estilização do aside de anuncios, footer e parcialmente o content, faltando apenas alguns detalhes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,12 +69,108 @@
         }
     }
     
+    /* CONTENT */
     .content{
         grid-area: content;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 30px;
+        grid-gap: 30px;
+
+        .col-wide{
+            grid-column: 1 / -1;
+        }
+
+        p{
+            line-height: 1.6;
+            font-size: 1.2em;
+            letter-spacing: -0.005em;
+            color: rgba(0, 0,0, .7);
+        }
+
+        .titulo{
+            color: #B07DFB;
+            h1{
+                font-size: 3.75em;
+                line-height: 1;
+                font-weight: 700;
+            }
+            span{
+                font-style: italic;
+                font-size: 0.875em;
+            }
+        }
+
+        .caracteristicas{
+            display: flex;
+            align-items: start;
+            div{
+                width: 80px;
+                text-align: center;
+                background: linear-gradient(135deg, #8844ee, #B07DFB);
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, .15);
+                position: relative;
+                &:first-child{
+                    margin-right: 30px;
+                }
+                span{
+                    display: block;
+                    color: #B07DFB;
+                }
+                .numero{
+                    font-size: 3em;
+                    line-height: 1;
+                    margin: 10px auto;
+                }
+                .rotulo{
+                    background-color: white;
+                    border-radius: 0 0 5px 5px;
+                    padding: 5px 0;
+                    position: relative;
+                    top: 2px;
+                }
+            }
+        }
+
+        .imagem-1{
+            grid-row: span 2;
+            align-self: end;
+        }
+
+        .imagem-2{
+            align-self: end;
+        }
+
+        .informacoes{
+            p + p{
+                margin-top: 30px;
+            }
+        }
     }
+
     
-    .aside{
+    /* ANUNCIOS */
+    .anuncios{
         grid-area: anuncios;
+        background: #fafbfc;
+        display: grid;
+        padding: 30px;
+        align-content: start;
+        grid-gap: 30px;
+    }
+
+    /* FOOTER */
+    footer{
+        grid-area: footer;
+        background: linear-gradient(135deg, #8844ee, #B07DFB);
+        p{
+            text-align: center;
+            color:white;
+            padding: 30px;
+        } 
     }
 }
 
