--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ ul {
 
 img {
   max-width: 100%;
+  display: block;
+  border-radius: 5px;
 }
 
 /* GRID GERAL */
@@ -27,6 +29,9 @@ img {
   grid-template-columns: minmax(150px, 1fr) 3fr 300px;
   grid-template-areas: "header header header" "sidenav content anuncios" "footer footer footer";
   /* SIDENAV */
+  /* CONTENT */
+  /* ANUNCIOS */
+  /* FOOTER */
 }
 .estrutura .header {
   grid-area: header;
@@ -79,9 +84,91 @@ img {
 }
 .estrutura .content {
   grid-area: content;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px;
+  grid-gap: 30px;
 }
-.estrutura .aside {
+.estrutura .content .col-wide {
+  grid-column: 1/-1;
+}
+.estrutura .content p {
+  line-height: 1.6;
+  font-size: 1.2em;
+  letter-spacing: -0.005em;
+  color: rgba(0, 0, 0, 0.7);
+}
+.estrutura .content .titulo {
+  color: #B07DFB;
+}
+.estrutura .content .titulo h1 {
+  font-size: 3.75em;
+  line-height: 1;
+  font-weight: 700;
+}
+.estrutura .content .titulo span {
+  font-style: italic;
+  font-size: 0.875em;
+}
+.estrutura .content .caracteristicas {
+  display: flex;
+  align-items: start;
+}
+.estrutura .content .caracteristicas div {
+  width: 80px;
+  text-align: center;
+  background: linear-gradient(135deg, #8844ee, #B07DFB);
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  position: relative;
+}
+.estrutura .content .caracteristicas div:first-child {
+  margin-right: 30px;
+}
+.estrutura .content .caracteristicas div span {
+  display: block;
+  color: #B07DFB;
+}
+.estrutura .content .caracteristicas div .numero {
+  font-size: 3em;
+  line-height: 1;
+  margin: 10px auto;
+}
+.estrutura .content .caracteristicas div .rotulo {
+  background-color: white;
+  border-radius: 0 0 5px 5px;
+  padding: 5px 0;
+  position: relative;
+  top: 2px;
+}
+.estrutura .content .imagem-1 {
+  grid-row: span 2;
+  align-self: end;
+}
+.estrutura .content .imagem-2 {
+  align-self: end;
+}
+.estrutura .content .informacoes p + p {
+  margin-top: 30px;
+}
+.estrutura .anuncios {
   grid-area: anuncios;
+  background: #fafbfc;
+  display: grid;
+  padding: 30px;
+  align-content: start;
+  grid-gap: 30px;
+}
+.estrutura footer {
+  grid-area: footer;
+  background: linear-gradient(135deg, #8844ee, #B07DFB);
+}
+.estrutura footer p {
+  text-align: center;
+  color: white;
+  padding: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
