--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,38 @@ img {
 .estrutura .content .informacoes p + p {
   margin-top: 30px;
 }
+.estrutura .content .destaque {
+  font-size: 0.875em;
+  color: #B07DFB;
+  max-width: 16em;
+}
+.estrutura .content .citacao, .estrutura .content .atributos {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.15);
+  background: linear-gradient(135deg, #8844ee, #B07DFB);
+}
+.estrutura .content .citacao p {
+  font-size: 1.5em;
+  color: white;
+  font-style: italic;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+}
+.estrutura .content .atributos {
+  align-self: start;
+}
+.estrutura .content .atributos li {
+  color: white;
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.2em;
+  padding: 15px;
+}
+.estrutura .content .atributos li + li {
+  border-top: 1px solid #B07DFB;
+}
 .estrutura .anuncios {
   grid-area: anuncios;
   background: #fafbfc;
