--- a/scss/style.scss
+++ b/scss/style.scss
@@ -149,6 +149,45 @@
                 margin-top: 30px;
             }
         }
+
+        .destaque{
+            font-size: 0.875em;
+            color: #B07DFB;
+            max-width: 16em;
+        }
+
+        .citacao, .atributos{
+            padding: 30px;
+            border-radius: 5px;
+            box-shadow: 5px 5px 15px 0 rgba(0, 0,0, .15);
+            background: linear-gradient(135deg, #8844ee, #B07DFB);
+        }
+
+        .citacao{
+            p{
+                font-size: 1.5em;
+                color: white;
+                font-style: italic;
+                text-align: center;
+                max-width: 500px;
+                margin: 0 auto;
+            }
+        }
+
+        .atributos{
+            align-self: start;
+            li{
+                color: white;
+                text-align: center;
+                font-family: 'Courier New', Courier, monospace;
+                font-size: 1.2em;
+                padding: 15px;
+                & + li{
+                    border-top: 1px solid #B07DFB;
+                }
+            }
+             
+        }
     }
 
     
