--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -70,7 +71,7 @@ img {
 }
 .estrutura .sidenav ul li a {
   display: block;
-  min-width: 60px;
+  min-width: 90px;
   max-width: 100px;
   margin: 0 auto 30px auto;
   background-color: white;
@@ -212,6 +213,50 @@ img {
   .estrutura {
     grid-template-columns: 100%;
     grid-template-areas: "header" "sidenav" "content" "anuncios" "footer";
+  }
+  .estrutura .header {
+    grid-template-columns: auto;
+  }
+  .estrutura .header .logo {
+    margin-bottom: 20px;
+  }
+  .estrutura .header ul li a {
+    font-size: 1em;
+  }
+  .estrutura .header ul li + li {
+    margin-left: 10px;
+  }
+  @keyframes setaanimation {
+    from {
+      right: 30px;
+    }
+    to {
+      right: 20px;
+    }
+  }
+  .estrutura .sidenav {
+    padding: 0 30px;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    position: relative;
+  }
+  .estrutura .sidenav ul {
+    display: flex;
+  }
+  .estrutura .sidenav ul li {
+    flex: 1 0 60px;
+  }
+  .estrutura .sidenav ul li a {
+    margin: 30px 30px 30px 0;
+  }
+  .estrutura .sidenav::after {
+    content: "→";
+    position: absolute;
+    top: 5px;
+    right: 35px;
+    color: rgba(0, 0, 0, 0.4);
+    animation: setaanimation 0.5s ease-in infinite alternate;
   }
 }
 
