--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ ul {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   display: block;
   border-radius: 5px;
 }
@@ -193,6 +193,7 @@ img {
   padding: 30px;
   align-content: start;
   grid-gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 .estrutura footer {
   grid-area: footer;
@@ -257,6 +258,11 @@ img {
     right: 35px;
     color: rgba(0, 0, 0, 0.4);
     animation: setaanimation 0.5s ease-in infinite alternate;
+  }
+}
+@media (max-width: 600px) {
+  .estrutura .content {
+    grid-template-columns: auto;
   }
 }
 
